...
          .toList(),
    );
  }

  static RemoteSettings defaultSettings() {
    return RemoteSettings(
      storeName: 'PHAROS',
      fontFamily: 'Montserrat',
      maintenanceMode: false,
      forceUpdateVersion: '1.0.0',
      appDebug: false,
      useMockData: false,
      theme: {'primary_color': '#FF9800'},
...
